# yet-another-fastapi-boilerplate

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.claude/rules/backend/: ai-agents.md  background.md  core.md  database.md  integrations.md  routes.md  services.md  testing.md
alembic/: alembic.ini  env.py
alembic/versions/: 2026_06_13_0900-0001_initial_create_items_table.py
app/: main.py
app/api/: __init__.py  deps.py
app/api/v1/: auth.py  up.py  users.py
app/core/: agents.py  config.py  db.py  errors.py  exception_handlers.py  exceptions.py  logger.py  pagination.py  queue.py  responses.py  security.py  sentry.py
app/core/db/: __init__.py  async_.py  base.py
app/features/items/: schemas.py
app/features/items/agents/: summarizer.py
app/features/items/routes/: items.py
app/features/items/service/: cleanup.py  create.py  helpers.py  list.py  summarize.py
app/integrations/sentry/: client.py
app/models/base/: schemas.py
app/models/session/: functions.py  models.py  schemas.py
app/models/user/: dependencies.py  functions.py  models.py  schemas.py
app/repositories/: __init__.py
app/repositories/items/: crud.py  dependencies.py  models.py
app/services/: auth.py  base.py
app/utils/: aws.py  emails.py  jwt.py  pagination.py  templates.py  time.py  uuid.py
app/utils/templates/: login-email.html.jinja2
app/workers/: base.py  celery.py  idempotency.py  queue.py  queues.py  registry.py  runner.py
scripts/: docker-entrypoint.sh  pgq.py
tests/: conftest.py
tests/api/: test_auth_api.py
tests/core/: test_error_registry.py
tests/factories/: base.py  item.py
tests/features/items/: test_routes.py
tests/features/items/service/: test_create.py  test_list.py
tests/fixtures/: auth.py
tests/repositories/items/: test_crud.py
tests/services/: test_auth_services.py
