[project]
name = "backend-app"
version = "0.0.1"
description = "Backend app"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.0",
    "factory-boy>=3.3.3",
    "fastapi>=0.125.0",
    "fastapi-guard>=4.2.2",
    "greenlet>=3.3.0",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.2",
    "pydantic-ai-slim[anthropic,bedrock]>=1.35.0",
    "pydantic-settings>=2.12.0",
    "rich>=14.2.0",
    "sentry-sdk[fastapi,sqlalchemy]>=2.48.0",
    "sqlalchemy>=2.0.45",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=37.4.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:builtin type .* has no __module__ attribute:DeprecationWarning",
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning:botocore",
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]
